# gstreaming

./: CMakeLists.txt
src/: main.cpp
